<resources>
    <string name="app_name">WechatMOD</string>

    <string name="main_chat">Chatting</string>
    <string name="main_contact">Contact</string>
    <string name="main_addcontact">Discovery</string>
    <string name="main_more">Me</string>

    <string name="sns_moments">Moments</string>
    <string name="sns_scan">Scan QR Code</string>
    <string name="sns_shake">Shake</string>
    <string name="sns_people_nearby">People Nearby</string>
    <string name="sns_drift_bottle">Drift Bottle</string>
    <string name="sns_games">Games</string>
    <string name="sns_shopping">Shopping</string>

    <string name="me_posts">My Posts</string>
    <string name="me_favorites">Favorites</string>
    <string name="me_wallet">Wallet</string>
    <string name="me_settings">Settings</string>
    <string name="me_card_package">Card Pack</string>
    <string name="me_emoji_store">Sticker Gallery</string>

    <string name="username">ID: </string>

    <string name="preference_title">WechatMOD Settings</string>
    <string name="preference_note">Note</string>
    <string name="preference_note_summary">Use this mod at your risk!</string>

    <string name="preference_ui_settings">UI Settings</string>
    <string name="preference_setnav">Select Wechat Navigation</string>
    <string-array name="preference_setnav_entries">
        <item>Default(iOS tabs)</item>
        <item>No any tabs(keep Swiping)</item>
        <item>Navigation Drawer</item>
    </string-array>
    <string name="preference_actionbar_color">Action bar color</string>
    <string-array name="preference_actionbar_color_entries">
        <item>Black</item>
        <item>Teal</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Blue Grey</item>
    </string-array>
    <string name="preference_force_statusbar_color">Force enable status bar color</string>
    <string name="preference_force_statusbar_color_summary">not compatible with Navigation Bar</string>
    <string name="preference_navidrawer_disable_items">Disable items in drawer</string>
    <string name="preference_navidrawer_disable_items_note">Select to disable</string>
    <string name="preference_navidrawer_pickup_background">Pick up a pic for background in drawer</string>

    <string name="preference_about">About</string>
    <string name="preference_version">Version</string>
    <string name="supported">(supported Wechat version)</string>
    <string name="unsupported">(unsupported Wechat version)</string>
    <string name="preference_dev">Dev</string>
    <string name="preference_donate">Donate</string>
    <string name="alipay">alipay:</string>
    <string name="copy_to_clipboard">content has been copied to clipboard</string>
    <string name="preference_license">Open source licenses</string>
    <string name="preference_hide_launcher_icon">Hide launcher icon</string>
    <string name="preference_hide_launcher_icon_summary">you can access this settings from Xposed Installer</string>

    <string name="preference_reboot_note">Please reboot Wechat to take effect.</string>
</resources>
